[gd_scene load_steps=9 format=3 uid="uid://8fqvos4og1fa"]

[ext_resource type="Script" path="res://screen/performance/PerformanceScreen.cs" id="1_wg3x3"]
[ext_resource type="Script" path="res://midi/recorder/MidiRecorder.cs" id="2_c7q52"]
[ext_resource type="Script" path="res://midi/scheduler/MidiScheduler.cs" id="3_3ekko"]
[ext_resource type="PackedScene" uid="uid://bk265yvb0xqjm" path="res://standard_view/standard_view.tscn" id="5_vlfb7"]
[ext_resource type="Script" path="res://screen/performance/side_icons.gd" id="6_71nrc"]
[ext_resource type="Script" path="res://screen/performance/visualisation.gd" id="6_0858b"]
[ext_resource type="Texture2D" uid="uid://6jim56wqbajh" path="res://util/icon.svg" id="6_gd6g2"]
[ext_resource type="PackedScene" uid="uid://ciletavbhl37" path="res://util/piano/piano.tscn" id="6_sd6b3"]

[node name="PerformanceScreen" type="Node2D"]
script = ExtResource("1_wg3x3")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -1280.0
offset_top = -640.0
offset_right = 2560.0
offset_bottom = 1280.0
metadata/_edit_lock_ = true

[node name="Logic" type="Node" parent="."]

[node name="MidiRecorder" type="Node" parent="Logic"]
unique_name_in_owner = true
script = ExtResource("2_c7q52")

[node name="MidiScheduler" type="Node" parent="Logic" node_paths=PackedStringArray("Recorder")]
unique_name_in_owner = true
script = ExtResource("3_3ekko")
Recorder = NodePath("../MidiRecorder")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(640, 320)

[node name="StandardView" parent="." instance=ExtResource("5_vlfb7")]
unique_name_in_owner = true
offset_left = 256.0
offset_right = 1024.0
offset_bottom = 520.0
fade_chords = true

[node name="Visualisation" type="Node2D" parent="."]
script = ExtResource("6_0858b")

[node name="CurrentChord" type="ColorRect" parent="Visualisation"]
visible = false
offset_left = 267.0
offset_top = -104.0
offset_right = 459.0
offset_bottom = -44.0
color = Color(1, 0.831373, 0, 0.501961)

[node name="SideIcons" type="Node2D" parent="Visualisation"]
script = ExtResource("6_71nrc")

[node name="Icon" type="Sprite2D" parent="Visualisation/SideIcons"]
position = Vector2(224, 138)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_gd6g2")

[node name="Icon2" type="Sprite2D" parent="Visualisation/SideIcons"]
position = Vector2(224, 258)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_gd6g2")

[node name="Icon3" type="Sprite2D" parent="Visualisation/SideIcons"]
position = Vector2(224, 378)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_gd6g2")

[node name="Icon4" type="Sprite2D" parent="Visualisation/SideIcons"]
position = Vector2(224, 498)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_gd6g2")

[node name="PianoBackground1" type="ColorRect" parent="."]
offset_left = -1280.0
offset_top = 544.0
offset_right = 2560.0
offset_bottom = 1280.0
color = Color(0, 0, 0, 0.443137)
metadata/_edit_lock_ = true

[node name="PianoBackground2" type="ColorRect" parent="."]
offset_left = 169.0
offset_top = 548.0
offset_right = 1111.0
offset_bottom = 637.0
color = Color(0.254496, 0.254496, 0.254496, 1)

[node name="Piano" parent="." instance=ExtResource("6_sd6b3")]
unique_name_in_owner = true
position = Vector2(173, 552)
OutputNames = Array[int]([0, 1])
PressedColor = Color(0.5, 0.5, 0.5, 1)
